<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="simple_str_main_title">IToys Simple</string>
    <string name="simple_str_main_basics">基础</string>
    <string name="simple_str_toasty_normal">正常吐司</string>
    <string name="simple_str_toasty_info">提示吐司</string>
    <string name="simple_str_toasty_warning">警告吐司</string>
    <string name="simple_str_toasty_success">成功吐司</string>
    <string name="simple_str_toasty_error">错误吐司</string>
    <string name="simple_str_show_loading">SHOW Loading</string>
    <string name="simple_str_show_loading_success">Loading Success</string>
    <string name="simple_str_show_loading_error">Loading Error</string>
    <string name="simple_str_show_mack_snack">Make Snack</string>
    <string name="simple_str_show_snack">这是一条 Snack 消息</string>

    <string name="simple_str_main_state_layout">State Layout</string>
    <string name="simple_str_main_state_empty">Empty State</string>
    <string name="simple_str_main_state_error">Error State</string>
</resources>